--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       <option value="episode">Episode</option>
     </select>
     <button id="searchButton">Find Movie!</button>
+    <button id='prevPage'>Previous Page</button>
+    <button id='nextPage'>Next Page</button>
   </div>
 
 <div id="results">
